feat: add img boots

--- a/src/app/products/product-item/product-item.component.html
+++ b/src/app/products/product-item/product-item.component.html
@@ -1,10 +1,7 @@
 <mat-card>
   <div mat-card-image class="img-container">
     <div class="img-container__inner">
-      <img
-        src="https://source.unsplash.com/random?football?boots={{ index }}"
-        alt=""
-      />
+      <img [src]="product.img" alt="" />
     </div>
   </div>
 
